# firecircle

./: CHANGELOG  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: DESIGN.md  manifesto.md
docs/invitation/: build.bat  fire-circle.fdb_latexmk  fire-circle.tex
src/firecircle/: __init__.py
src/firecircle/adapters/: __init__.py  cli.py  test_adapters.py
src/firecircle/adapters/anthropic/: adapter.py
src/firecircle/adapters/base/: __init__.py  adapter.py
src/firecircle/adapters/openai/: adapter.py
src/firecircle/api/: __init__.py
src/firecircle/examples/: __init__.py  arangodb_example.py  comparative_dialogue.py  simple_dialogue.py
src/firecircle/memory/: __init__.py  arangodb_store.py  base.py  inmemory.py  vector_store.py
src/firecircle/orchestrator/: __init__.py  dialogue_manager.py  dialogue_state.py  turn_policy.py
src/firecircle/protocol/: __init__.py  message.py  router.py
src/firecircle/tools/: __init__.py
tests/: test_adapters.py  test_arangodb_store.py  test_memory.py  test_orchestrator.py
