[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firecircle"
version = "0.1.0"
authors = [
  { name = "Fire Circle Contributors" },
]
description = "A system for facilitating meaningful dialogue between multiple AI models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.103.0",
    "pydantic>=2.4.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "openai>=1.6.0",
    "anthropic>=0.7.0",
    "requests>=2.31.0",
    "pymongo>=4.5.0",
    "motor>=3.3.0", 
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

# Optional dependencies
[project.optional-dependencies]
arangodb = ["python-arango>=7.7.0"]

[project.urls]
"Homepage" = "https://github.com/fsgeek/firecircle"
"Bug Tracker" = "https://github.com/fsgeek/firecircle/issues"

[project.scripts]
firecircle-demo = "firecircle.examples.simple_dialogue:main"
firecircle-compare = "firecircle.examples.comparative_dialogue:main"
firecircle-arangodb = "firecircle.examples.arangodb_example:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88